Change SVG fill color from black to white

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  width="18.000000pt" height="18.000000pt" viewBox="0 0 600.000000 600.000000"
  preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,600.000000) scale(0.100000,-0.100000)"
-fill="#000000" stroke="none">
+fill="#ffffff" stroke="none">
 <path d="M273 5158 c55 -112 134 -275 177 -363 43 -88 114 -234 158 -325 44
 -91 274 -563 511 -1050 238 -487 640 -1311 894 -1833 354 -727 464 -944 473
 -935 6 7 68 113 137 235 l126 222 -221 453 c-121 249 -271 557 -332 683 -62
