Update track art and loading text in index.html

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="relative w-64 h-64 mb-10">
                 <div class="absolute inset-0 bg-purple-500 rounded-full blur-3xl opacity-10"></div>
                 <div class="animate-spin-slow w-full h-full rounded-full border-4 border-slate-700 p-2 bg-slate-800 shadow-2xl overflow-hidden">
-                    <img id="track-art" src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?w=400&h=400&fit=crop" class="w-full h-full object-cover rounded-full">
+                    <img id="track-art" src="https://cdn.discordapp.com/attachments/1282025137993945211/1458264316003487787/IMG_3054.png?w=400&h=400&fit=crop" class="w-full h-full object-cover rounded-full">
                 </div>
             </div>
 
             <div class="text-center mb-8">
-                <h1 id="track-title" class="text-2xl font-bold">Loading Repository...</h1>
-                <p id="track-artist" class="text-slate-400 text-sm mt-1">GitHub Music Library</p>
+                <h1 id="track-title" class="text-2xl font-bold">Loading...</h1>
+                <p id="track-artist" class="text-slate-400 text-sm mt-1">🫴</p>
             </div>
 
             <div class="w-full px-4">
