--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="relative w-64 h-64 mb-10">
                 <div class="absolute inset-0 bg-purple-500 rounded-full blur-3xl opacity-10"></div>
                 <div class="animate-spin-slow w-full h-full rounded-full border-4 border-slate-700 p-2 bg-slate-800 shadow-2xl overflow-hidden">
-                    <img id="track-art" src="https://cdn.discordapp.com/attachments/1282025137993945211/1458264316003487787/IMG_3054.png?w=400&h=400&fit=crop" class="w-full h-full object-cover rounded-full">
+                    <img id="track-art" src="https://i.ibb.co/kVT8P7n5/IMG-3054.jpg?w=400&h=400&fit=crop" class="w-full h-full object-cover rounded-full">
                 </div>
             </div>
 
